--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
   },
   "files": [
     "./dev/app.component.ts",
-    "./dev/boot.ts"
+    "./dev/boot.ts",
+    "./dev/property-binding.component.ts"
   ]
 }
