--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
   },
   "files": [
     "./dev/app.component.ts",
+    "./dev/bindings/confirm.component.ts",
     "./dev/bindings/input.component.ts",
     "./dev/boot.ts"
   ]
